exercise-04-local-kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cs454-demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cs454-demo
  template:
    metadata:
      labels:
        app: cs454-demo
    spec:
      containers:
        - name: api
          image: cs454-k8s-demo:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 1
            periodSeconds: 2
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 5
