exercise-04-local-kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cs454-demo
spec:
  selector:
    app: cs454-demo
  ports:
    - port: 80
      targetPort: 3000
